Search filter added name and lastname checkers!